--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.68",
     "react-router-dom": "^6.4.2",
