--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.68",
     "react-router-dom": "^6.4.2",
