--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.68",
     "react-router-dom": "^6.4.2",
+    "react-toastify": "^9.1.1",
     "react-tooltip": "^4.4.3",
     "web3modal": "^1.9.9"
   },
